--- a/gb/15/4/24/n4418881.md
+++ b/gb/15/4/24/n4418881.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ofbisf307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ofbisf307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ofbisf307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ofbisf307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>惊闻为器官杀戮真相  ABC：我要告诉全世界</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/04/1504231218372730-600x400.jpg" />
 <h6>华裔青年史蒂夫·马可(Steven Marcal)在中国城接受记者采访。（周凤临／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2015年04月24日讯】（大纪元记者周凤临旧金山报导）生于美国、长于美国现年25岁的华裔青年史蒂夫·马可（Steven Marcal），是大家通常所说的ABC（America Born Chinese)。马可他不是<ahref="https://github.com/ofbisf307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E5%AD%A6%E5%91%98.md#1">法轮功学员</a>，母亲来自中国大陆，父亲是澳门人。他虽然身为华人，但不会说汉语。站在旧金山唐人街街头，马可和法轮功学员一起，向游人们讲述着法轮功受迫害的真相。</p>
+	<p>【大纪元2015年04月24日讯】（大纪元记者周凤临旧金山报导）生于美国、长于美国现年25岁的华裔青年史蒂夫·马可（Steven Marcal），是大家通常所说的ABC（America Born Chinese)。马可他不是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E5%AD%A6%E5%91%98.md#1">法轮功学员</a>，母亲来自中国大陆，父亲是澳门人。他虽然身为华人，但不会说汉语。站在旧金山唐人街街头，马可和法轮功学员一起，向游人们讲述着法轮功受迫害的真相。</p>
 <p>“对于我来说，衣服、金钱这些物质上的东西，这些都不算什么，但当我听说1.1亿个活生生的人——母亲、父亲、姐妹、兄弟、女儿或者是儿子——因为信仰而遭到杀戮，这（向西方人传递这一信息）绝对值得我花时间去做。”马可如是说道。</p>
-<p>他说的花自己的业余时间做的事情，就是站在旧金山中国城都板街（Grant Avenue）、华盛顿街（Washington Avenue）街口，身着自己订制、印有醒目的“为了器官的杀戮”和<ahref="https://github.com/ofbisf307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E5%AD%A6%E5%91%98.md#1">法轮功学员</a>遭受酷刑演示图片的T恤衫，向过往的市民、游客派发呼吁中共停止活体摘取法轮功学员器官的小册子，并向他们讲述法轮功在中国被迫害的真相。</p>
+<p>他说的花自己的业余时间做的事情，就是站在旧金山中国城都板街（Grant Avenue）、华盛顿街（Washington Avenue）街口，身着自己订制、印有醒目的“为了器官的杀戮”和<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E5%AD%A6%E5%91%98.md#1">法轮功学员</a>遭受酷刑演示图片的T恤衫，向过往的市民、游客派发呼吁中共停止活体摘取法轮功学员器官的小册子，并向他们讲述法轮功在中国被迫害的真相。</p>
 <p>2星期前，马可到中国城游玩，当经过都板街、华盛顿街街角时，一位女士递给他一份小册子，他接过了这份小册子，这位女士随后用英语加上一句“请帮助我们，他们在杀害我们，贩卖我们的器官”，这引起了马可的注意。</p>
 <p>按照小册子所说，马可在YouTube上观看了影片《为了器官的杀戮：中共秘密的国家移植产业》（Kill for Organs – China’s Secret State Transplant Business），他被深深的震撼了。</p>
 <p>
@@ -37,41 +37,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/4/2/n4402951.md#1">追查国际：205军医院活摘证据（5）</a></li>
-<li><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/4/2/n4402957.md#1">追查国际：上海复旦大学活摘证据（7）</a></li>
-<li><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/4/9/n4407934.md#1">澳洲主流电视台播纪录片《活摘》 各界震惊</a></li>
-<li><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/4/16/n4413127.md#1">SBS《活摘》曝光罪恶 悉尼各界呼吁关注</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/2/n4402951.md#1">追查国际：205军医院活摘证据（5）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/2/n4402957.md#1">追查国际：上海复旦大学活摘证据（7）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/9/n4407934.md#1">澳洲主流电视台播纪录片《活摘》 各界震惊</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/16/n4413127.md#1">SBS《活摘》曝光罪恶 悉尼各界呼吁关注</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9809482.md#1" target="_blank">吐斯廉博物馆告诉世界：柬埔寨发生过什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/6/n9230640.md#1" target="_blank">对中国法轮功学员被迫害的调查 (2)</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10004659.md#1" target="_blank">共产暴政录：批判武训，拒绝特蕾莎修女</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/16/n12885150.md#1">【未解之谜】报恩的白牛 印度男孩五次转生</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/15/n12880731.md#1">【馨香雅句】王羲之的书法老师竟是她</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/18/n12887969.md#1">【小宇宙传说】宇宙中最大谜题：什么是时间？</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/20/n12891592.md#1">【未解之谜】轰动世界的巴克斯特实验</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/2/26/n12777808.md#1">《三国演义》中的高人：神卜、神医和隐士</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903156.md#1">【横河观点】美国媒体人如何吃中共的嘴软</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903028.md#1">【小宇宙传说】死亡是生命结束？天上有摄像机</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898998.md#1">【预告】专访程晓农：美中海上对抗升级（7）</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901519.md#1">【远见快评】特斯拉风暴揭秘：中共要这三样</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901440.md#1">【内幕】美上将回忆 房峰辉落马前的会面</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901453.md#1">沈舟：俄罗斯撤军 辽宁号再被推上前台</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898706.md#1">宁静耿直爆料：邓超曾被某制片人潜规则</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901477.md#1">杜汶泽脸书宣布：旗下网台永久聘用蔡玉玲</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901216.md#1">赵丽颖冯绍峰离婚登热搜 21亿点阅量被消失</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12899061.md#1">频被吐槽体形壮硕 蒋欣大方回应身材争议</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899738.md#1">赵丽颖、冯绍峰宣布离婚 孩子共同抚养</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/17/6/4/n9224895.md#1">国际汇款最划算的方式是什么？（多国适用）（更新）</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12897713.md#1">心律不整5大危害 可致心肌梗塞？食疗和穴位改善</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12900193.md#1">微波炉最危险不是辐射 做错2件事当心受伤、吃进毒素</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899914.md#1">跑步时被熊盯上 美国男子用这一招惊险脱身</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/21/n12894418.md#1">500度以下近视眼能痊愈？2招改善视力</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970524.md#1">台湾目前有4万多居家检疫者 双北市占近半数</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970106.md#1">北市寻陈先生 北京返台失联 手机空号留假地址</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970667.md#1">任志强视频热传 批中共体制烂透 吁国人推墙</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970670.md#1">华春莹找上美国务院发言人辩论 又遭漏底</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/14/n11939926.md#1">现世报：危机窥伺中得恩报 毫无预警下遭恶报</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ofbisf307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ofbisf307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/4/24/n4418881.htm">惊闻为器官杀戮真相  ABC：我要告诉全世界</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/4/24/n4418881.htm">惊闻为器官杀戮真相  ABC：我要告诉全世界</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ofbisf307/djy/blob/master/gb/15/4/24/n4418881.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ofbisf307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ofbisf307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ofbisf307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/15/4/24/n4418881.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
